[package]
name = "async-stream-connection"
version = "1.0.1"
edition = "2021"

repository = "https://github.com/User65k/async-stream-connection"
description = "AsyncRead and AsyncWrite on TCP as well as Unix sockets. "
license = "MIT"
keywords = ["tcp", "uds", "tokio", "async"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["net"] }
serde = { version = "1.0", optional=true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1", features = ["rt","macros","io-util"] }

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
